test/fail/unop-t.rnp
~true;
---
 --> fail/unop-t.rnp:1:2
  |
1 | ~true;
  |  ^^^^ Expected number but got boolean
  |
